fixed layout issue in cartModal
text wasnt centered because of li element, in app component just removed useless whitespace

--- a/src/styles/layout/_cart-modal.scss
+++ b/src/styles/layout/_cart-modal.scss
@@ -39,7 +39,9 @@
                 height: 100%;
                 font-size: 1.4rem;
                 color: $black-color;
-                @include grid-center;
+                display: grid;
+                justify-content: center;
+                align-items: center;
             }
 
             li {
